--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,19 @@
     top: 0px;
     background: #020E35;
 }
+.main-red-button a{
+  position: absolute;
+  width: 107px;
+  height: 40px;
+  background: linear-gradient(270deg, #8C32F0 0%, #E73587 100%);   
+  font-family: 'Basic';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #FFFFFF;
+
+}
 /* ======= Nav ============================================================== */
 .navbar {
   padding: 0;
@@ -53,7 +66,7 @@
     width: 531px;
     height: 366px;
     left: 135px;
-    top: 200px;
+    top: 160px;
     font-family: 'Basic';
     font-style: normal;
     font-weight: 400;
@@ -68,3 +81,18 @@
     left: 600px;
     top: 118px;
 }
+#hero .btn-get-started {
+  position: absolute;
+  width: 140px;
+  height: 40px;
+  left: 135px;
+  top: 500px;
+  background: linear-gradient(270deg, #8C32F0 0%, #E73587 100%);
+  font-family: 'Basic';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  /* identical to box height */
+  color: #FFFFFF;
+  }
