--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,124 @@
-/* ======= Header ============================================================== */
-#header {
-    position: absolute;
-    width: 1215px;
-    height: 80px;
-    left: 0px;
-    top: 0px;
-    background: #FFFFFF;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-}
-#header .logo img {
-    position: absolute;
-    width: 100px;
-    height: 120px;
-    left: 135px;
-    top: 0px;
-    background: #020E35;
-}
-.main-red-button a{
-  position: absolute;
-  width: 107px;
-  height: 40px;
-  background: linear-gradient(270deg, #8C32F0 0%, #E73587 100%);   
-  font-family: 'Basic';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #FFFFFF;
-
-}
-/* ======= Nav ============================================================== */
-.navbar {
-  padding: 0;
-}
-.navbar ul {
+@import url("https://fonts.googleapis.com/css2?family=Basic&display=swap");
+* {
   margin: 0;
   padding: 0;
-  display: flex;
-  list-style: none;
-  align-items: center;
+  box-sizing: border-box;
+  font-family: "Basic", sans-serif;
 }
-.navbar li {
-  position: relative;
+
+:root {
+  --color-1: #020e35;
+  --color-gradient-1: linear-gradient(90deg, rgba(231, 53, 135, 1) 0%, rgba(140, 50, 240, 1) 100%);
 }
-.navbar>ul>li {
-  white-space: nowrap;
-  padding: 10px 0 10px 28px;
-}
-.navbar a,
-.navbar a:focus {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 3px;
-  font-size: 15px;
-  font-weight: 600;
-  color: #222222;
-  white-space: nowrap;
-  transition: 0.3s;
-  position: relative;
-}
-/* ======= Heroo ============================================================== */
-#hero h3{
-    position: absolute;
-    width: 531px;
-    height: 366px;
-    left: 135px;
-    top: 160px;
-    font-family: 'Basic';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 80px;
-    line-height: 100px;
-    color: #020E35;
-}
-#hero .img{
-    position: absolute;
-    width: 600px;
-    height: 566px;
-    left: 600px;
-    top: 118px;
-}
-#hero .btn-get-started {
+
+/* ======= Header ============================================================== */
+
+nav .navbar-brand {
+  height: 95px;
+  width: 70px;
+  background: var(--color-gradient-1);
   position: absolute;
-  width: 140px;
-  height: 40px;
-  left: 135px;
-  top: 500px;
-  background: linear-gradient(270deg, #8C32F0 0%, #E73587 100%);
-  font-family: 'Basic';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  /* identical to box height */
-  color: #FFFFFF;
-  }
+  top: 0;
+}
+
+nav .brand {
+  background-color: var(--color-1);
+  height: 90px;
+  width: 70px;
+  position: absolute;
+  top: 0;
+  margin: 0;
+}
+
+nav .brand img {
+  margin: 15px auto;
+}
+
+nav .contact-us {
+  color: white !important;
+  background: var(--color-gradient-1);
+}
+
+nav a {
+  margin: 0.5em 1em;
+  color: black !important;
+}
+
+/* ======= Hero ============================================================== */
+
+#hero {
+  margin-top: 100px !important;
+}
+
+#hero h1 {
+  font-size: 5em;
+  margin-bottom: 0.5em !important;
+}
+
+#hero a {
+  background: var(--color-gradient-1);
+  color: white !important;
+  text-decoration: none;
+  padding: 1em 1.5em;
+}
+
+/* ======= About ============================================================== */
+
+#about {
+  margin-top: 50px !important;
+}
+
+#about img {
+  left: 0;
+  margin: 0;
+  padding: 0;
+  height: 250px;
+  width: 125px;
+  z-index: -10;
+}
+
+#about div {
+  margin: 70px 0;
+}
+
+#about h2 {
+  margin-bottom: 1px;
+}
+
+#about span {
+  display: block;
+  width: 100px;
+  height: 1px;
+  background: var(--color-gradient-1);
+  margin: auto;
+}
+
+#about p {
+  margin-top: 10px;
+}
+
+/* ======= services ============================================================== */
+
+#services {
+  background-color: var(--color-1);
+}
+
+#services h2 {
+  color: white;
+}
+
+.valuable-services span {
+  display: block;
+  width: 100px;
+  height: 1px;
+  background: var(--color-gradient-1);
+  margin: auto;
+}
+
+.work span {
+  display: block;
+  width: 100px;
+  height: 1px;
+  background: var(--color-gradient-1);
+  margin: auto;
+}
