--- a/css/style.css
+++ b/css/style.css
@@ -143,4 +143,32 @@ nav a {
 
 .contact-us form .custom {
   width: 100%;
+  border-radius: 2px;
+  height: 48px !important;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+  margin-bottom: 1.5em !important;
+}
+
+.contact-us form .custom.area {
+  height: 168px !important;
+}
+
+.contact-us .text-1 {
+  font-size: 1.875rem;
+}
+
+.contact-us .text-2 {
+  font-size: 5.625rem;
+}
+
+.contact-us form .custom-btn {
+  background: var(--color-gradient-1);
+  color: white !important;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 48px;
+  border: none;
 }
