--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ nav a {
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   margin-bottom: 1.5em !important;
+  padding: 5px;
 }
 
 .contact-us form .custom.area {
