--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
   --color-gradient-1: linear-gradient(90deg, rgba(231, 53, 135, 1) 0%, rgba(140, 50, 240, 1) 100%);
 }
 
+h2 {
+  font-size: 2.5rem;
+}
+
 /* ======= Header ============================================================== */
 
 nav .navbar-brand {
@@ -95,9 +99,9 @@ nav a {
 
 /* ======= About ============================================================== */
 
-#about {
+/* #about {
   margin-top: 50px !important;
-}
+} */
 
 #about img {
   left: 0;
@@ -192,6 +196,11 @@ nav a {
   background-color: var(--color-1);
   padding-top: 380px;
 }
+
+#work h4 {
+  font-size: 30px;
+}
+
 .work a {
   background: var(--color-gradient-1);
   color: white !important;
