--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ nav a {
 }
 
 #hero h1 {
-  font-size: 5em;
+  font-size: 5rem;
   margin-bottom: 0.5em !important;
 }
 
@@ -97,11 +97,28 @@ nav a {
   padding: 1em 1.5em;
 }
 
-/* ======= About ============================================================== */
+@media (max-width: 1400px) {
+  #hero h1 {
+    font-size: 4.3rem;
+    margin-bottom: 0.5em !important;
+  }
+}
 
-/* #about {
-  margin-top: 50px !important;
-} */
+@media (max-width: 1200px) {
+  #hero h1 {
+    font-size: 3.6rem;
+    margin-bottom: 0.5em !important;
+  }
+}
+
+@media (max-width: 1200px) {
+  #hero h1 {
+    font-size: 3.6rem;
+    margin-bottom: 0.5em !important;
+  }
+}
+
+/* ======= About ============================================================== */
 
 #about img {
   left: 0;
@@ -235,11 +252,11 @@ nav a {
 }
 
 .contact-us .text-1 {
-  font-size: 1.875rem;
+  font-size: 2vmax;
 }
 
 .contact-us .text-2 {
-  font-size: 5.625rem;
+  font-size: 6vmax;
 }
 
 .contact-us form .custom-btn {
@@ -250,4 +267,14 @@ nav a {
   width: 100%;
   height: 48px;
   border: none;
+}
+
+@media (max-width: 768px) {
+  .contact-us .text-1 {
+    font-size: 2rem;
+  }
+
+  .contact-us .text-2 {
+    font-size: 4rem;
+  }
 }
